--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=dajiffy
-//DB_USERNAME=homestead
 DB_USERNAME=kevintamez82
-//DB_PASSWORD=secret
- DB_PASSWORD=secret123
+//DB_USERNAME=root
+DB_PASSWORD=secret123
+//DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,19 +23,19 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-//MAIL_DRIVER=smtp
-//MAIL_HOST=smtp.gmail.com
-//MAIL_PORT=587
-//MAIL_USERNAME=kevin.delafuente@humanquality.com.mx
-//MAIL_PASSWORD=toryLanez147
-//MAIL_ENCRYPTION=ssl
-
 MAIL_DRIVER=smtp
-MAIL_HOST=mail.restaurantea.com
-MAIL_PORT=25
-MAIL_USERNAME=mail.restaurantea.com
-MAIL_PASSWORD=secret123
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=kevin.delafuente@humanquality.com.mx
+MAIL_PASSWORD=toryLanez147
 MAIL_ENCRYPTION=ssl
+
+//MAIL_DRIVER=smtp
+//MAIL_HOST=mail.restaurantea.com
+//MAIL_PORT=25
+//MAIL_USERNAME=mail.restaurantea.com
+//MAIL_PASSWORD=secret123
+//MAIL_ENCRYPTION=ssl
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
